# tech-learnings

./: .gitignore  README.md  calculator.py  full-curriculum.md  readme.md  requirements.txt  test_calculator.py
.circleci/: config.yml
aws-cdk/: README.md
aws-study/: README.md
flaskr/: auth.py
python-learning/multiprocessing/journaldev-python-multiprocessing-example/: cpu-count.py  main.py  multiprocessing_example.py  multiprocessing_pool_example.py  process_example.py  pyproject.toml  readme.md
python-learning/talk-python/modern-apis-with-fastapi/src/ch03-our-first-api/: README.md  pyproject.toml
python-learning/talk-python/modern-apis-with-fastapi/src/ch03-our-first-api/our_first_api/: main.py
python-learning/talk-python/modern-apis-with-fastapi/src/ch03-our-first-api/tests/: test_our_first_api.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/: README.md  pyproject.toml
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/my_weather_service/: main.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/my_weather_service/api/: weather_api.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/my_weather_service/infrastructure/: weather_cache.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/my_weather_service/services/: openweather_service.py  report_service.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/my_weather_service/views/: home.py
python-learning/talk-python/modern-apis-with-fastapi/src/my-weather-service/tests/: test_my_weather_service.py
python-learning/typer/: pyproject.toml  readme.md
python-learning/typer/typer-tutorial/: 00-simple-example.py  01-simple-example-cli-argument.py  02-simple-example-cli-option.py  03-simple-example-documentation.py  04-colors.py  main.py
(+385 files in other folders)
