[tool.poetry]
name = "multiprocessing-tutorial"
version = "0.1.0"
description = "Multiprocessing Tutorial"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
