[tool.poetry]
name = "my-weather-service"
version = "0.1.0"
description = ""
authors = ["Johannes Giorgis <johannesgiorgis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.13.3"
httpx = "^0.23.0"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
